--- a/DressAppSolution/DressApp/MainWindow.xaml
+++ b/DressAppSolution/DressApp/MainWindow.xaml
@@ -1,12 +1,44 @@
 ﻿<Window x:Class="DressApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:helpers="clr-namespace:DressApp.View.Helpers"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DressApp"
+        xmlns:DressApp="clr-namespace:DressApp"
+        xmlns:viewModel="clr-namespace:DressApp.ViewModel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        WindowState="Maximized"
+        Title="kinect" Height="600" Width="1000"
+        Cursor="None"
+        DataContext="{Binding KinectViewModel, Source={StaticResource KinectViewModelLoader}}">
     <Grid>
-        
+
+        <Image x:Name="ImageArea" Source="{Binding KinectService.KinectCameraImage}"
+               helpers:SizeObserver.Observe="true"
+			   helpers:SizeObserver.ObservedWidth="{Binding KinectService.Width, Mode=OneWayToSource}"
+			   helpers:SizeObserver.ObservedHeight="{Binding KinectService.Height, Mode=OneWayToSource}"/>
+
+
+
+        <!--Grid containing Skeleton parts for debugging-->
+        <ItemsControl ItemsSource="{Binding KinectService.SkeletonManager.SkeletonParts}" 
+                      >
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <Grid Width="{Binding KinectService.Width}" Height="{Binding KinectService.Height}"/>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+        </ItemsControl>
+        <!--Grid used for taking screenshots-->
+        <Grid Name="ScreenshotGrid" Opacity="0.7" Background="Black" Visibility="Collapsed">
+            <TextBlock Name="ScreenshotText" FontSize="40" HorizontalAlignment="Center" Opacity="0.7" VerticalAlignment="Center" Foreground="White"/>
+        </Grid>
+        <!--Grid used for viewing error messages-->
+        <Grid Name="ErrorGrid" Opacity="0.7" Background="Black" Visibility="{Binding KinectService.ErrorGridVisibility}">
+            <TextBlock Text="{Binding KinectService.ErrorGridMessage}" 
+                       FontSize="20" TextAlignment="Center" Opacity="0.7" VerticalAlignment="Center" Foreground="White"/>
+        </Grid>
+
     </Grid>
 </Window>
