--- a/DressAppSolution/DressApp/App.xaml
+++ b/DressAppSolution/DressApp/App.xaml
@@ -6,10 +6,10 @@
     <Application.Resources>
         <ResourceDictionary>
             <viewModel:KinectViewModelLoader x:Key="KinectViewModelLoader"/>
-            <!--<ResourceDictionary.MergedDictionaries>
+            <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Styles/GlassButton.xaml"/>
                 <ResourceDictionary Source="Resources/Styles/RoundButton.xaml"/>
-            </ResourceDictionary.MergedDictionaries>-->
+            </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
 
     </Application.Resources>
