--- a/DressAppSolution/DressApp/Resources/Styles/RoundButton.xaml
+++ b/DressAppSolution/DressApp/Resources/Styles/RoundButton.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:buttons="clr-namespace:KinectFittingRoom.View.Buttons">
+                    xmlns:buttons="clr-namespace:DressApp.View.Buttons">
     <Style x:Key="RoundButton" TargetType="{x:Type buttons:KinectButton}">
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="Template">
