--- a/DressAppSolution/WpfApp1/MainWindow.xaml
+++ b/DressAppSolution/WpfApp1/MainWindow.xaml
@@ -1,18 +1,82 @@
-﻿<Window x:Class="WpfApp1.MainWindow"
+﻿<Window x:Class="WpfApp1.Window1"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="Vestidor Virtual" Height="350" Width="525">
-    <Grid>
-        <Grid.Background>
-            <ImageBrush ImageSource="C:\Users\Luma\Pictures\dressapp.jpg" Opacity="0.9"/>
-        </Grid.Background>
-        <Button x:Name="Dress" Content="Vestidor" HorizontalAlignment="Left" Height="66" Margin="56,189,0,0" VerticalAlignment="Top" Width="134" Background="#FFC3F9FA" FontFamily="Pristina" FontSize="32" FontWeight="Bold" Click="Dress_Click"/>
-        <Button x:Name="Management" Content="Administrador" HorizontalAlignment="Left" Margin="304,193,0,0" VerticalAlignment="Top" Width="160" Height="62" Background="#FFC3F9F5" FontFamily="Pristina" FontSize="30" FontWeight="Bold" Click="Management_Click"/>
-        <Label Content="Bienvenido a DressApp" HorizontalAlignment="Left" Height="71" Margin="43,77,0,0" VerticalAlignment="Top" Width="420" Background="#FFF5DFB2" FontFamily="Pristina" FontSize="52" FontWeight="Bold"/>
-
+        Title="Administrador de ropas"
+        Height="748" Width="1000" Background="#FFBD4E68" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Stretch" VerticalAlignment="Top" WindowStyle="None" WindowStartupLocation="CenterScreen">
+    <Window.Effect>
+        <DropShadowEffect/>
+    </Window.Effect>
+    <Grid Background="#FFFFFDFD">
+        <DockPanel HorizontalAlignment="Left" Height="730" LastChildFill="False" Margin="4,3,0,0" VerticalAlignment="Top" Width="118">
+            <Grid Height="728" Margin="0,2,0,0" VerticalAlignment="Top" Width="116" ScrollViewer.HorizontalScrollBarVisibility="Visible">
+                <Grid.Background>
+                    <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+                        <GradientStop Color="Black" Offset="1"/>
+                        <GradientStop Color="#FFF1F1F1" Offset="0.45"/>
+                    </LinearGradientBrush>
+                </Grid.Background>
+                <Button Content="" HorizontalAlignment="Left" Height="74" Margin="24,64,0,0" VerticalAlignment="Top" Width="76" Opacity="0.9" BorderThickness="1" Cursor="Hand">
+                    <Button.Background>
+                        <ImageBrush ImageSource="C:\Users\Luma\DressApp\DressAppSolution\DressApp\Resources\Icons\Categories\hat_2.jpg"/>
+                    </Button.Background>
+                </Button>
+                <Button Content="" HorizontalAlignment="Left" Height="66" Margin="24,450,0,0" VerticalAlignment="Top" Width="76" Cursor="Hand">
+                    <Button.Background>
+                        <ImageBrush ImageSource="C:\Users\Luma\DressApp\DressAppSolution\DressApp\Resources\Icons\Categories\dress_2.jpg"/>
+                    </Button.Background>
+                </Button>
+                <Button Content="" HorizontalAlignment="Left" Margin="24,160,0,0" VerticalAlignment="Top" Width="73" Height="70" Cursor="Hand">
+                    <Button.Background>
+                        <ImageBrush ImageSource="C:\Users\Luma\DressApp\DressAppSolution\DressApp\Resources\Icons\Categories\glasses_2.jpg"/>
+                    </Button.Background>
+                </Button>
+                <Button Content="" HorizontalAlignment="Left" Margin="24,254,0,0" VerticalAlignment="Top" Width="73" Height="70" Click="Button_Click" Cursor="Hand">
+                    <Button.Background>
+                        <ImageBrush ImageSource="C:\Users\Luma\DressApp\DressAppSolution\DressApp\Resources\Icons\Categories\tie_2.jpg" Stretch="UniformToFill"/>
+                    </Button.Background>
+                </Button>
+                <Button Content="" HorizontalAlignment="Left" Margin="24,354,0,0" VerticalAlignment="Top" Width="77" Height="70" RenderTransformOrigin="0.475,0.48" Cursor="Hand">
+                    <Button.Background>
+                        <ImageBrush ImageSource="C:\Users\Luma\DressApp\DressAppSolution\DressApp\Resources\Icons\Categories\polo_2.jpg"/>
+                    </Button.Background>
+                </Button>
+                <Label Content="Categorías " HorizontalAlignment="Left" Height="38" Margin="-2,8,0,0" VerticalAlignment="Top" Width="116" FontFamily="Pristina" FontSize="22" HorizontalContentAlignment="Center" RenderTransformOrigin="0.488,0.421" Background="#FFFBFBF5"/>
+                <Button Content="" HorizontalAlignment="Left" Height="66" Margin="24,540,0,0" VerticalAlignment="Top" Width="76" Cursor="Hand">
+                    <Button.Background>
+                        <ImageBrush ImageSource="C:\Users\Luma\DressApp\DressAppSolution\DressApp\Resources\Icons\Categories\skirt_2.jpg"/>
+                    </Button.Background>
+                </Button>
+                <Button Content="" HorizontalAlignment="Left" Height="66" Margin="24,630,0,0" VerticalAlignment="Top" Width="76" Cursor="Hand">
+                    <Button.Background>
+                        <ImageBrush ImageSource="C:\Users\Luma\DressApp\DressAppSolution\DressApp\Resources\Icons\Categories\bag_2.jpg" Stretch="UniformToFill"/>
+                    </Button.Background>
+                </Button>
+            </Grid>
+        </DockPanel>
+        <DockPanel HorizontalAlignment="Left" LastChildFill="False" Margin="136,3,0,8" Width="636" Background="#FFFDF4FD">
+            <Grid Height="725" Margin="0,6,0,-2" VerticalAlignment="Top" Width="640">
+                <Label Content="DressApp" HorizontalAlignment="Left" Height="58" Margin="20,44,0,0" VerticalAlignment="Top" Width="504"/>
+                <Label Content="Label" HorizontalAlignment="Left" Height="274" Margin="24,136,0,0" VerticalAlignment="Top" Width="474"/>
+                <Button Content="Button" HorizontalAlignment="Left" Height="62" Margin="54,476,0,0" VerticalAlignment="Top" Width="186"/>
+                <Button Content="Button" HorizontalAlignment="Left" Height="64" Margin="346,476,0,0" VerticalAlignment="Top" Width="214"/>
+                <Button Content="Button" HorizontalAlignment="Left" Height="77" Margin="537,617,0,0" VerticalAlignment="Top" Width="74"/>
+            </Grid>
+        </DockPanel>
+        <DockPanel LastChildFill="False" Margin="779,3,6,1" Focusable="True" Cursor="Hand">
+            <DockPanel.Background>
+                <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+                    <GradientStop Color="Black" Offset="1"/>
+                    <GradientStop Color="#FFFFFDFD" Offset="0.299"/>
+                </LinearGradientBrush>
+            </DockPanel.Background>
+        </DockPanel>
+        <Label Content="Desarrollado por JoinedKeys&#xD;&#xA;Todos los derechos reservados 2017&#x9; :v&#x9;&#x9;" HorizontalAlignment="Left" Height="70" Margin="132,645,0,0" VerticalAlignment="Top" Width="586" FontSize="16" FontFamily="Malgun Gothic" Background="{x:Null}"/>
+        <Grid HorizontalAlignment="Left" Height="735" Margin="779,4,0,0" VerticalAlignment="Top" Width="204">
+            <Button Content="Eliminar&#xD;&#xA;" HorizontalAlignment="Left" Height="51" Margin="94,30,0,0" VerticalAlignment="Top" Width="57" Cursor="None" Focusable="False"/>
+        </Grid>
     </Grid>
 </Window>
