--- a/DressAppSolution/WpfApp1/MainWindow.xaml
+++ b/DressAppSolution/WpfApp1/MainWindow.xaml
@@ -19,57 +19,27 @@
                         <GradientStop Color="#FFF1F1F1" Offset="0.45"/>
                     </LinearGradientBrush>
                 </Grid.Background>
-                <Button x:Name="Hat" Content="" HorizontalAlignment="Left" Height="74" Margin="24,64,0,0" VerticalAlignment="Top" Width="76" Opacity="0.9" BorderThickness="1" Cursor="Hand" Click="Hat_Click" IsCancel="True" IsHitTestVisible="False">
-                    <Button.Background>
-                        <ImageBrush ImageSource="C:\Users\Luma\DressApp\DressAppSolution\DressApp\Resources\Icons\Categories\hat_2.jpg"/>
-                    </Button.Background>
-                </Button>
-                <Button x:Name="Dresses" Content="" HorizontalAlignment="Left" Height="66" Margin="24,444,0,0" VerticalAlignment="Top" Width="76" Cursor="Hand" Click="Dresses_Click">
-                    <Button.Background>
-                        <ImageBrush ImageSource="C:\Users\Luma\DressApp\DressAppSolution\DressApp\Resources\Icons\Categories\dress_2.jpg"/>
-                    </Button.Background>
-                </Button>
-                <Button x:Name="Glasses" Content="" HorizontalAlignment="Left" Margin="24,160,0,0" VerticalAlignment="Top" Width="73" Height="70" Cursor="Hand" IsHitTestVisible="False">
-                    <Button.Background>
-                        <ImageBrush ImageSource="C:\Users\Luma\DressApp\DressAppSolution\DressApp\Resources\Icons\Categories\glasses_2.jpg"/>
-                    </Button.Background>
-                </Button>
-                <Button x:Name="Blouse" Content="" HorizontalAlignment="Left" Margin="24,347,0,0" VerticalAlignment="Top" Width="73" Height="70" Click="Blouse_Click" Cursor="Hand" RenderTransformOrigin="0.582,0.075">
-                    <Button.Background>
-                        <ImageBrush ImageSource="C:\Users\Luma\DressApp\DressAppSolution\DressApp\Resources\Icons\Categories\blouse.jpg" Stretch="UniformToFill"/>
-                    </Button.Background>
-                </Button>
-                <Button x:Name="T_shirt" Content="" HorizontalAlignment="Left" Margin="24,254,0,0" VerticalAlignment="Top" Width="77" Height="70" RenderTransformOrigin="0.496,-1.447" Cursor="Hand" Click="T_shirt_Click">
-                    <Button.Background>
-                        <ImageBrush ImageSource="C:\Users\Luma\DressApp\DressAppSolution\DressApp\Resources\Icons\Categories\polo_2.jpg"/>
-                    </Button.Background>
-                </Button>
+                <Button x:Name="Hat" Content="" HorizontalAlignment="Left" Height="74" Margin="24,64,0,0" VerticalAlignment="Top" Width="76" Opacity="0.9" BorderThickness="1" Cursor="Hand" Click="Hat_Click" IsCancel="True" IsHitTestVisible="False"/>
+                <Button x:Name="Dresses" Content="" HorizontalAlignment="Left" Height="66" Margin="24,360,0,0" VerticalAlignment="Top" Width="76" Cursor="Hand" Click="Dresses_Click"/>
+                <Button x:Name="Glasses" Content="" HorizontalAlignment="Left" Margin="24,160,0,0" VerticalAlignment="Top" Width="73" Height="70" Cursor="Hand" IsHitTestVisible="False"/>
+                <Button x:Name="T_shirt" Content="" HorizontalAlignment="Left" Margin="24,254,0,0" VerticalAlignment="Top" Width="77" Height="70" RenderTransformOrigin="0.496,-1.447" Cursor="Hand" Click="T_shirt_Click"/>
                 <Label Content="Categorías " HorizontalAlignment="Left" Height="38" Margin="-2,8,0,0" VerticalAlignment="Top" Width="116" FontFamily="Pristina" FontSize="22" HorizontalContentAlignment="Center" RenderTransformOrigin="0.488,0.421" Background="#FFFBFBF5"/>
-                <Button x:Name="Skirt" Content="" HorizontalAlignment="Left" Height="66" Margin="24,536,0,0" VerticalAlignment="Top" Width="76" Cursor="Hand" Click="Skirt_Click">
-                    <Button.Background>
-                        <ImageBrush ImageSource="C:\Users\Luma\DressApp\DressAppSolution\DressApp\Resources\Icons\Categories\skirt_2.jpg"/>
-                    </Button.Background>
-                </Button>
-                <Button x:Name="Bags" Content="" HorizontalAlignment="Left" Height="66" Margin="24,630,0,0" VerticalAlignment="Top" Width="76" Cursor="Hand" Click="Bags_Click">
-                    <Button.Background>
-                        <ImageBrush ImageSource="C:\Users\Luma\DressApp\DressAppSolution\DressApp\Resources\Icons\Categories\bag_2.jpg" Stretch="UniformToFill"/>
-                    </Button.Background>
-                </Button>
+                <Button x:Name="Skirt" Content="" HorizontalAlignment="Left" Height="66" Margin="24,466,0,0" VerticalAlignment="Top" Width="76" Cursor="Hand" Click="Skirt_Click"/>
+                <Button x:Name="Bags" Content="" HorizontalAlignment="Left" Height="66" Margin="24,570,0,0" VerticalAlignment="Top" Width="76" Cursor="Hand" Click="Bags_Click"/>
             </Grid>
         </DockPanel>
         <DockPanel HorizontalAlignment="Left" LastChildFill="False" Margin="136,3,0,8" Width="636" Background="#FFFDF4FD">
             <Grid Height="725" Margin="0,6,0,-2" VerticalAlignment="Top" Width="640">
 
-                <h:HelixViewport3D x:Name="viewPort3d" ZoomExtentsWhenLoaded="true" Grid.RowSpan="2" >
+                <h:HelixViewport3D x:Name="viewPort3d" ZoomExtentsWhenLoaded="true" Grid.RowSpan="2">
                     <!-- Remember to add light to the scene -->
                     <h:DefaultLights/>
                 </h:HelixViewport3D>
 
                 <Label Content="DressApp" HorizontalAlignment="Left" Height="58" Margin="20,44,0,0" VerticalAlignment="Top" Width="504"/>
                 <Label Content="Label" HorizontalAlignment="Left" Height="274" Margin="24,136,0,0" VerticalAlignment="Top" Width="474"/>
-                <Button Content="Button" HorizontalAlignment="Left" Height="62" Margin="54,476,0,0" VerticalAlignment="Top" Width="186"/>
-                <Button Content="Button" HorizontalAlignment="Left" Height="64" Margin="346,476,0,0" VerticalAlignment="Top" Width="214"/>
-                <Button Content="Button" HorizontalAlignment="Left" Height="77" Margin="537,617,0,0" VerticalAlignment="Top" Width="74"/>
+                <Button x:Name="TextureEdit" Content="Editar Textura" HorizontalAlignment="Left" Height="33" Margin="117,493,0,0" VerticalAlignment="Top" Width="109" Click="EditTexture_Click"/>
+                <Button x:Name="ShowModel" Content="Mostrar" HorizontalAlignment="Left" Margin="361,493,0,0" VerticalAlignment="Top" Width="93" Height="33" Click="ShowModel_Click"/>
             </Grid>
         </DockPanel>
         <DockPanel LastChildFill="False" Margin="779,3,6,1" Focusable="True" Cursor="Hand">
@@ -84,16 +54,16 @@
         <Grid HorizontalAlignment="Left" Height="735" Margin="779,4,0,0" VerticalAlignment="Top" Width="204"/>
         <Grid HorizontalAlignment="Left" Height="737" Margin="783,2,0,0" VerticalAlignment="Top" Width="207">
             <ListBox HorizontalAlignment="Left" Height="662" Margin="13,66,0,0" VerticalAlignment="Top" Width="179">
-                <Button x:Name="Button1" Content="Button" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button1_Click"/>
-                <Button x:Name="Button2" Content="Button" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" RenderTransformOrigin="0.571,0.116"/>
-                <Button x:Name="Button3" Content="Button" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" RenderTransformOrigin="0.511,1.874"/>
-                <Button x:Name="Button4" Content="Button" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" RenderTransformOrigin="0.511,1.874"/>
-                <Button x:Name="Button5" Content="Button" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" RenderTransformOrigin="0.511,1.874"/>
-                <Button x:Name="Button6" Content="Button" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" RenderTransformOrigin="0.511,1.874"/>
-                <Button x:Name="Button7" Content="Button" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" RenderTransformOrigin="0.511,1.874"/>
-                <Button x:Name="Button8" Content="Button" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" RenderTransformOrigin="0.511,1.874"/>
-                <Button x:Name="Button9" Content="Button" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" RenderTransformOrigin="0.511,1.874"/>
-                <Button x:Name="Button10" Content="Button" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" RenderTransformOrigin="0.511,1.874"/>
+                <Button x:Name="Button1" Content="Button" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_1"/>
+                <Button x:Name="Button2" Content="Button" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_2"/>
+                <Button x:Name="Button3" Content="Button" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_3"/>
+                <Button x:Name="Button4" Content="Button" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_4"/>
+                <Button x:Name="Button5" Content="Button" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_5"/>
+                <Button x:Name="Button6" Content="Button" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_6"/>
+                <Button x:Name="Button7" Content="Button" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_7"/>
+                <Button x:Name="Button8" Content="Button" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_8"/>
+                <Button x:Name="Button9" Content="Button" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_9"/>
+                <Button x:Name="Button10" Content="Button" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_10"/>
             </ListBox>
             <Label x:Name="Prendas" Content="Prendas" HorizontalAlignment="Left" Margin="19,15,0,0" VerticalAlignment="Top" Height="41" Width="170" FontFamily="Pristina" FontSize="24" HorizontalContentAlignment="Center"/>
         </Grid>
