--- a/DressAppSolution/WpfApp1/OpenningWindow.xaml
+++ b/DressAppSolution/WpfApp1/OpenningWindow.xaml
@@ -6,10 +6,8 @@
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
         Title="Vestidor Virtual" Height="350" Width="525">
-    <Grid>
-        <Grid.Background>
-            <ImageBrush ImageSource="C:\Users\Luma\Pictures\dressapp.jpg" Opacity="0.9"/>
-        </Grid.Background>
+    <Grid x:Name="gridBackground">
+        
         <Button x:Name="Dress" Content="Vestidor" HorizontalAlignment="Left" Height="66" Margin="56,189,0,0" VerticalAlignment="Top" Width="134" Background="#FFC3F9FA" FontFamily="Pristina" FontSize="32" FontWeight="Bold" Click="Dress_Click"/>
         <Button x:Name="Management" Content="Administrador" HorizontalAlignment="Left" Margin="304,193,0,0" VerticalAlignment="Top" Width="160" Height="62" Background="#FFC3F9F5" FontFamily="Pristina" FontSize="30" FontWeight="Bold" Click="Management_Click"/>
         <Label Content="Bienvenido a DressApp" HorizontalAlignment="Left" Height="71" Margin="43,77,0,0" VerticalAlignment="Top" Width="420" Background="#FFF5DFB2" FontFamily="Pristina" FontSize="52" FontWeight="Bold"/>
