--- a/DressAppSolution/WpfApp1/ViewModel3D.xaml
+++ b/DressAppSolution/WpfApp1/ViewModel3D.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WpfApp1.ViewModel3D"
+﻿<Window x:Name="Prenda" x:Class="WpfApp1.ViewModel3D"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,10 +6,10 @@
         xmlns:h="http://helix-toolkit.org/wpf"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="Window2" Height="300" Width="300"
-        Closing="DataWindow_Closing">
+        Title="Vista Prenda" Height="300" Width="300"
+        Closing="DataWindow_Closing" WindowStartupLocation="CenterOwner">
     <Grid>
-        <h:HelixViewport3D x:Name="viewPort3d" ZoomExtentsWhenLoaded="true" Grid.RowSpan="2" >
+        <h:HelixViewport3D x:Name="viewPort3d" ZoomExtentsWhenLoaded="true" Grid.RowSpan="2" CoordinateSystemHorizontalPosition="Center" ViewCubeHorizontalPosition="Center" >
             <!-- Remember to add light to the scene -->
             <h:DefaultLights/>
         </h:HelixViewport3D>
