--- a/DressAppSolution/WpfApp1/MainWindow.xaml
+++ b/DressAppSolution/WpfApp1/MainWindow.xaml
@@ -8,64 +8,84 @@
         mc:Ignorable="d"
        
         Title="Administrador de ropas"
-        Height="748" Width="1000" Background="#FFBD4E68" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Stretch" VerticalAlignment="Top" WindowStyle="None" WindowStartupLocation="CenterScreen" AllowDrop="True">
+        Height="748" Width="1000" Background="#FF83394B" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Stretch" VerticalAlignment="Top" WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen" AllowDrop="True">
 
-    <Grid Background="#FFFFFDFD">
+    <Grid Background="#FFDADAD3">
         <DockPanel HorizontalAlignment="Left" Height="730" LastChildFill="False" Margin="4,3,0,0" VerticalAlignment="Top" Width="118">
-            <Grid Height="728" Margin="0,2,0,0" VerticalAlignment="Top" Width="116" ScrollViewer.HorizontalScrollBarVisibility="Visible">
-                <Grid.Background>
-                    <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
-                        <GradientStop Color="Black" Offset="1"/>
-                        <GradientStop Color="#FFF1F1F1" Offset="0.45"/>
-                    </LinearGradientBrush>
-                </Grid.Background>
+            <Grid Height="728" Margin="0,2,0,0" VerticalAlignment="Top" Width="116" ScrollViewer.HorizontalScrollBarVisibility="Visible" Background="#FF2A8DB2">
                 <Button x:Name="Hat" Content="" HorizontalAlignment="Left" Height="74" Margin="24,64,0,0" VerticalAlignment="Top" Width="76" Opacity="0.9" BorderThickness="1" Cursor="Hand" Click="Hat_Click" IsCancel="True" IsHitTestVisible="False"/>
                 <Button x:Name="Dresses" Content="" HorizontalAlignment="Left" Height="66" Margin="24,360,0,0" VerticalAlignment="Top" Width="76" Cursor="Hand" Click="Dresses_Click"/>
                 <Button x:Name="Glasses" Content="" HorizontalAlignment="Left" Margin="24,160,0,0" VerticalAlignment="Top" Width="73" Height="70" Cursor="Hand" IsHitTestVisible="False"/>
                 <Button x:Name="T_shirt" Content="" HorizontalAlignment="Left" Margin="24,254,0,0" VerticalAlignment="Top" Width="77" Height="70" RenderTransformOrigin="0.496,-1.447" Cursor="Hand" Click="T_shirt_Click"/>
-                <Label Content="Categorías " HorizontalAlignment="Left" Height="38" Margin="-2,8,0,0" VerticalAlignment="Top" Width="116" FontFamily="Pristina" FontSize="22" HorizontalContentAlignment="Center" RenderTransformOrigin="0.488,0.421" Background="#FFFBFBF5"/>
+                <Label Content="Categorías " HorizontalAlignment="Left" Height="38" Margin="-2,8,-2,0" VerticalAlignment="Top" Width="120" FontFamily="Pristina" FontSize="22" HorizontalContentAlignment="Center" RenderTransformOrigin="0.488,0.421" Background="#FFF1EC76"/>
                 <Button x:Name="Skirt" Content="" HorizontalAlignment="Left" Height="66" Margin="24,466,0,0" VerticalAlignment="Top" Width="76" Cursor="Hand" Click="Skirt_Click"/>
                 <Button x:Name="Bags" Content="" HorizontalAlignment="Left" Height="66" Margin="24,570,0,0" VerticalAlignment="Top" Width="76" Cursor="Hand" Click="Bags_Click" IsHitTestVisible="False"/>
             </Grid>
         </DockPanel>
-        <DockPanel HorizontalAlignment="Left" LastChildFill="False" Margin="136,3,0,8" Width="636" Background="#FFFDF4FD">
+        <DockPanel x:Name="background_main" HorizontalAlignment="Left" LastChildFill="False" Margin="135,4,0,6" Width="636">
+            
             <Grid Height="725" Margin="0,6,0,-2" VerticalAlignment="Top" Width="640">
 
-                <h:HelixViewport3D x:Name="viewPort3d" ZoomExtentsWhenLoaded="true" Grid.RowSpan="2">
-                    <!-- Remember to add light to the scene -->
-                    <h:DefaultLights/>
-                </h:HelixViewport3D>
 
-                <Label Content="DressApp" HorizontalAlignment="Left" Height="58" Margin="20,44,0,0" VerticalAlignment="Top" Width="504"/>
-                <Label Content="" HorizontalAlignment="Left" Height="274" Margin="24,136,0,0" VerticalAlignment="Top" Width="474"/>
-                <Button x:Name="TextureEdit" Content="Editar Textura" HorizontalAlignment="Left" Height="33" Margin="117,493,0,0" VerticalAlignment="Top" Width="109" Click="EditTexture_Click"/>
-                <Button x:Name="ShowModel" Content="Mostrar" HorizontalAlignment="Left" Margin="361,493,0,0" VerticalAlignment="Top" Width="93" Height="33" Click="ShowModel_Click"/>
+                <Label Content="DressApp" HorizontalAlignment="Left" Height="76" Margin="229,48,0,0" VerticalAlignment="Top" Width="199" FontFamily="Pristina" FontSize="55" FontWeight="Bold"/>
+                <Button x:Name="TextureEdit" Content="Editar Textura" HorizontalAlignment="Left" Height="70" Margin="106,422,0,0" VerticalAlignment="Top" Width="155" Click="EditTexture_Click" FontFamily="Pristina" FontSize="27" Background="#FFA2155B"/>
+                <Button x:Name="ShowModel" Content="Mostrar" Margin="407,421,102,0" VerticalAlignment="Top" Width="131" Height="69" Click="ShowModel_Click" FontSize="27" FontFamily="Pristina" HorizontalContentAlignment="Center" HorizontalAlignment="Center" Background="#FFA2155B"/>
+                <Label Content="Bienvenidos al vestidor virtual , disfrute &#xD;&#xA;de una nueva  forma de  interactuar con sus&#xD;&#xA;prendas de vestir&#xD;&#xA;&#xD;&#xA;Acceda a una categoría y  comience a  armar su &#xD;&#xA;closet de prendas&#xD;&#xA;&#xD;&#xA;Cualquier duda dirigirse al icono &quot;?&quot; en la &#xD;&#xA;parte superior" HorizontalAlignment="Left" Height="222" Margin="104,146,0,0" VerticalAlignment="Top" Width="444" FontFamily="Lucida Handwriting" FontSize="17" Background="#FFF1EC76"/>
+                <Grid Margin="73,581,444,48">
+                    <DockPanel Margin="34,-14,-34,14">
+                        <DockPanel.Background>
+                            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                <GradientStop Color="Black" Offset="0"/>
+                                <GradientStop Color="#FF295095" Offset="1"/>
+                            </LinearGradientBrush>
+                        </DockPanel.Background>
+                        <DockPanel x:Name="Logo_1" Width="128" Margin="0,-25,0,2">
+                            
+                        </DockPanel>
+                    </DockPanel>
+                </Grid>
+                <DockPanel Margin="369,575,52,60">
+                    <DockPanel.Background>
+                        <ImageBrush/>
+                    </DockPanel.Background>
+                    <DockPanel Margin="0,-32,0,0" Width="132">
+                        <Grid Margin="0,-11,0,2" Width="156">
+                            <DockPanel x:Name="Logo_2" Width="164" HorizontalAlignment="Right" Margin="-16,2,8,-1">
+                                
+                            </DockPanel>
+                        </Grid>
+                    </DockPanel>
+                </DockPanel>
+                <Button Content="Go!" HorizontalAlignment="Left" Height="48" Margin="568,639,0,0" VerticalAlignment="Top" Width="51" Click="Button_Click" Background="#FFF34252" FontFamily="Pristina" FontSize="26" Cursor="Hand"/>
+                <Button x:Name="Pregunta" Content="?" HorizontalAlignment="Left" Height="40" Margin="573,18,0,0" VerticalAlignment="Top" Width="42" FontSize="26" Background="#FF1CE6B8" Cursor="Help" Click="PreguntaUsuario_Button"/>
             </Grid>
+            <Image Height="729" VerticalAlignment="Top" Width="100"/>
+            <Image Height="729" VerticalAlignment="Top" Width="100"/>
+            <Image Height="102" Margin="0,583,0,0" VerticalAlignment="Top" Width="134"/>
         </DockPanel>
-        <DockPanel LastChildFill="False" Margin="779,3,6,1" Focusable="True" Cursor="Hand">
+        <DockPanel LastChildFill="False" Margin="780,3,6,1" Focusable="True" Cursor="Hand">
             <DockPanel.Background>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="1"/>
-                    <GradientStop Color="#FFFFFDFD" Offset="0.299"/>
+                    <GradientStop Color="#FF2A8DB2" Offset="0.299"/>
                 </LinearGradientBrush>
             </DockPanel.Background>
         </DockPanel>
-        <Label Content="Desarrollado por JoinedKeys&#xD;&#xA;Todos los derechos reservados 2017&#x9; &#x9;&#x9;" HorizontalAlignment="Left" Height="70" Margin="132,645,0,0" VerticalAlignment="Top" Width="586" FontSize="16" FontFamily="Malgun Gothic" Background="{x:Null}"/>
         <Grid HorizontalAlignment="Left" Height="735" Margin="779,4,0,0" VerticalAlignment="Top" Width="204"/>
         <Grid HorizontalAlignment="Left" Height="737" Margin="783,2,0,0" VerticalAlignment="Top" Width="207">
-            <ListBox HorizontalAlignment="Left" Height="662" Margin="13,66,0,0" VerticalAlignment="Top" Width="179">
-                <Button x:Name="Button1" Content="" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_1"/>
-                <Button x:Name="Button2" Content="" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_2"/>
-                <Button x:Name="Button3" Content="" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_3"/>
-                <Button x:Name="Button4" Content="" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_4"/>
-                <Button x:Name="Button5" Content="" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_5"/>
-                <Button x:Name="Button6" Content="" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_6"/>
-                <Button x:Name="Button7" Content="" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_7"/>
-                <Button x:Name="Button8" Content="" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_8"/>
-                <Button x:Name="Button9" Content="" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_9"/>
-                <Button x:Name="Button10" Content="" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_10"/>
+            <ListBox HorizontalAlignment="Left" Height="662" Margin="13,66,0,0" VerticalAlignment="Top" Width="179" Background="#FF2A8DB2">
+                <Button x:Name="Button1" Content="" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_1" Cursor="Hand"/>
+                <Button x:Name="Button2" Content="" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_2" Cursor="Hand"/>
+                <Button x:Name="Button3" Content="" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_3" Cursor="Hand"/>
+                <Button x:Name="Button4" Content="" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_4" Cursor="Hand"/>
+                <Button x:Name="Button5" Content="" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_5" Cursor="Hand"/>
+                <Button x:Name="Button6" Content="" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_6" Cursor="Hand"/>
+                <Button x:Name="Button7" Content="" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_7" Cursor="Hand"/>
+                <Button x:Name="Button8" Content="" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_8" Cursor="Hand"/>
+                <Button x:Name="Button9" Content="" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_9" Cursor="Hand"/>
+                <Button x:Name="Button10" Content="" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Width="71" Height="69" Click="Button_Click_10" Cursor="Hand"/>
             </ListBox>
-            <Label x:Name="Prendas" Content="Prendas" HorizontalAlignment="Left" Margin="19,15,0,0" VerticalAlignment="Top" Height="41" Width="170" FontFamily="Pristina" FontSize="24" HorizontalContentAlignment="Center"/>
+            <Label x:Name="Prendas" Content="Prendas" HorizontalAlignment="Left" Margin="1,10,0,0" VerticalAlignment="Top" Height="46" Width="200" FontFamily="Pristina" FontSize="24" HorizontalContentAlignment="Center" Background="#FFF1EC76"/>
         </Grid>
     </Grid>
 </Window>
